--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   freezed: ^2.3.2
   flutter_riverpod: ^2.1.1
   get_it: ^7.2.0
+  flutter_screenutil: ^5.7.0
 
 dev_dependencies:
   flutter_test:
